--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
 main {
     width: 100%;
     height: 100%;
+    min-height: 100vh;
     background-color: var(--main-light);
 }
 
@@ -101,7 +102,7 @@ header {
 }
 
 header #new {
-    padding: 6px 10px;
+    /* padding: 6px 10px; */
     width: auto;
     background-color: var(--btn-dark-tertiary-bg);
     border-radius: 15px;
@@ -109,16 +110,16 @@ header #new {
     color: #fff;
 }
 
-#new span {
+#new span:nth-child(2) {
     display: none;
 }
 
 header #new span:nth-child(1) {
-    padding: 4px;
-    margin-right: 3px;
-    color: var(--heading-light);
+    padding: 8px;
+    /* margin-right: 3px; */
+    color: var(--heading-dark);
     border-radius: 50%;
-    background-color: #fff;
+    background-color: var(--heading-light);
 }
 
 .empty-page {
@@ -139,6 +140,7 @@ main.dark-theme .empty-page p {
 /* styling the ul that holds the contact's page and details light mode */
 .contacts {
     max-width: 700px;
+    padding: 1rem 0;
     /* margin: 0 auto; */
 }
 
@@ -161,11 +163,16 @@ main.dark-theme .empty-page p {
 
 .contact {
     display: flex;
+    align-items: center;
 }
 
 .contact-details p {
     font-weight: 700;
     margin: 0 5px;
+}
+
+.contact-image .fas {
+    margin-right: 1rem;
 }
 
 /* contact card light mode */
