--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
     font-size: 1.5rem;
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 /* general class to hide an element */
@@ -72,6 +73,7 @@ main {
     width: 100%;
     height: 100%;
     min-height: 100vh;
+    overflow-x: hidden;
     overflow-y: scroll;
     background-color: var(--main-light);
     transition: all 0.3s linear;
@@ -180,6 +182,10 @@ main.dark-theme .empty-page p {
     margin-right: 1rem;
 }
 
+.contact-card.slide {
+    right: 0;
+}
+
 /* contact card light mode */
 .contact-card {
     position: fixed;
@@ -192,6 +198,7 @@ main.dark-theme .empty-page p {
     width: 100%;
     max-width: 350px; /*change this to 50% for wider screens*/
     right: 0;
+    /* transition: all 4s ease; */
     background-color: var(--main-dark);
 }
 
@@ -465,14 +472,14 @@ main.dark-theme .form-control:focus {
 /* optimizing the screen for different sizes */
 @media screen and (min-width: 700px) {
     .contact-form {
-        width: 35%;
+        width: 46%;
     }
 
     header #new {
         display: flex;
         justify-content: space-around;
         align-items: center;
-        padding: 0.2rem 1rem;
+        padding: 0.5rem 1rem;
     }
 
     #new span:nth-child(2) {
